--- a/MyWebSite-Web/src/main/resources/application.yml
+++ b/MyWebSite-Web/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   dubbo:
     application:
       name: web
-    base-package: com.gjj.website.facaded.service  # dubbo服务发布者实现类注解所在的包
+    base-package: com.gjj.website.facaded.service  # dubbo服务发布者接口所在的包（非实现类）
     registry:
       address: 127.0.0.1              # zookeeper注册中心的地址
       port: 2181                           # zookeeper注册中心的端口
