--- a/MyWebSite-Service/pom.xml
+++ b/MyWebSite-Service/pom.xml
@@ -58,6 +58,14 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+
+
         <!-- mysql -->
         <dependency>
             <groupId>mysql</groupId>
@@ -99,6 +107,7 @@
             <artifactId>slf4j-log4j12</artifactId>
         </dependency>
 
+
     </dependencies>
 
     <build>
@@ -108,6 +117,22 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <filtering>true</filtering>
+                <directory>${basedir}/src/main/java</directory>
+                <includes>
+                    <include>**/*Mapper.xml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>${basedir}/src/main/java</directory>
+                <excludes>
+                    <exclude>**/*Mapper.xml</exclude>
+                </excludes>
+            </resource>
+        </resources>
     </build>
 
 </project>
