测试跳转页面，添加依赖，修改配置

--- a/MyWebSite-Web/src/main/resources/application.yml
+++ b/MyWebSite-Web/src/main/resources/application.yml
@@ -16,3 +16,12 @@ spring:
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
+  thymeleaf:
+    encoding: UTF-8
+    suffix: .html
+    prefix: classpath:/templates/
+    mode: HTML5
+  mvc:
+    static-path-pattern: /**
+  resources:
+    static-locations: classpath:/static/,classpath:/templates/,classpath:/resources,classpath:/META-INF/resources
