--- a/MyWebSite-Web/pom.xml
+++ b/MyWebSite-Web/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>facaded</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <!--若要跳转页面，则添加该依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
