整合Redis，整合druid，修改配置

--- a/MyWebSite-Service/src/main/resources/application.yml
+++ b/MyWebSite-Service/src/main/resources/application.yml
@@ -15,13 +15,15 @@ spring:
     protocol:
       name: dubbo
       serialization: hessian2
-    provider:
+    consumer:
       retries: 0
+      timeout: 50000
   datasource:
     data-username: root
     data-password: admin
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/website?serverTimezone=UTC
+    type: com.alibaba.druid.pool.DruidDataSource
 mybatis:
     mapper-locations: classpath:com/gjj/website/service/mapper/xml/*Mapper.xml
     typeAliasesPackage: com.gjj.website.facaded.model
