--- a/MyWebSite-Web/pom.xml
+++ b/MyWebSite-Web/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>facaded</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.gjj.website</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!--若要跳转页面，则添加该依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -103,8 +108,6 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
-
-
     </dependencies>
 
     <build>
