--- a/MyWebSite-Web/src/main/resources/application.yml
+++ b/MyWebSite-Web/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
       serialization: hessian2
     provider:
       retries: 0
+      timeout: 50000
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
