--- a/MyWebSite-Web/src/main/resources/application.yml
+++ b/MyWebSite-Web/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
+
+  #模板引擎
   thymeleaf:
     encoding: UTF-8
     suffix: .html
