--- a/MyWebSite-ChatRoom/pom.xml
+++ b/MyWebSite-ChatRoom/pom.xml
@@ -35,6 +35,19 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+
+        <!-- mysql -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
