--- a/MyWebSite-Web/pom.xml
+++ b/MyWebSite-Web/pom.xml
@@ -14,9 +14,8 @@
     <name>web</name>
     <description>Demo project for Spring Boot</description>
 
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
+
+
 
     <dependencies>
         <dependency>
@@ -108,6 +107,13 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
+
+            <!-- mysql -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <scope>runtime</scope>
+            </dependency>
     </dependencies>
 
     <build>
